{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 168,
  "lineage": "32174f24-c879-a74a-fd68-9f5dfb33a252",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0022f774911c1d690",
            "arn": "arn:aws:ec2:us-east-1:725445055643:instance/i-07b47b92eb3519c53",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b47b92eb3519c53",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0edb198d737363da1",
            "private_dns": "ip-10-0-0-138.ec2.internal",
            "private_ip": "10.0.0.138",
            "public_ip": "54.146.253.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e99569e9fe6a33a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001a367bf41899714",
            "tags": {
              "Name": "Sequence"
            },
            "tags_all": {
              "Name": "Sequence"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c7352aa9204ac566"
            ]
          },
          "dependencies": [
            "aws_subnet.main",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:internet-gateway/igw-008ae2569b2e8376a",
            "id": "igw-008ae2569b2e8376a",
            "owner_id": "725445055643",
            "tags": {
              "Name": "terraform-app-internet-gateway"
            },
            "tags_all": {
              "Name": "terraform-app-internet-gateway"
            },
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:725445055643:loadbalancer/app/sequence-lb-tf/ea2b98d5c572c28d",
            "arn_suffix": "app/sequence-lb-tf/ea2b98d5c572c28d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sequence-lb-tf-1781566313.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:725445055643:loadbalancer/app/sequence-lb-tf/ea2b98d5c572c28d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sequence-lb-tf",
            "security_groups": [
              "sg-0622f9b265b05e1a3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-001a367bf41899714"
              },
              {
                "subnet_id": "subnet-0118a3823555686c5"
              },
              {
                "subnet_id": "subnet-0227b050e7c05db91"
              },
              {
                "subnet_id": "subnet-0423f5832371e3531"
              },
              {
                "subnet_id": "subnet-0a7e93a7c8f502cae"
              },
              {
                "subnet_id": "subnet-0c2bc5f418630350e"
              }
            ],
            "subnets": [
              "subnet-001a367bf41899714",
              "subnet-0118a3823555686c5",
              "subnet-0227b050e7c05db91",
              "subnet-0423f5832371e3531",
              "subnet-0a7e93a7c8f502cae",
              "subnet-0c2bc5f418630350e"
            ],
            "tags": {
              "Name": "terraform-example-lb"
            },
            "tags_all": {
              "Name": "terraform-example-lb"
            },
            "vpc_id": "vpc-05574daad2672982f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.main",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:725445055643:listener/app/sequence-lb-tf/ea2b98d5c572c28d/0bc5e8d7594c1ea0",
            "certificate_arn": "arn:aws:acm:us-east-1:725445055643:certificate/24731f5d-8c2c-4cf0-aca3-a05024387864",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:725445055643:targetgroup/app-server-lb-target/e052ab3ae635bcdb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:725445055643:listener/app/sequence-lb-tf/ea2b98d5c572c28d/0bc5e8d7594c1ea0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:725445055643:loadbalancer/app/sequence-lb-tf/ea2b98d5c572c28d",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_server_wss",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_server_wss",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:725445055643:targetgroup/app-server-lb-target/e052ab3ae635bcdb",
            "arn_suffix": "targetgroup/app-server-lb-target/e052ab3ae635bcdb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "426",
                "path": "/",
                "port": "8443",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:725445055643:targetgroup/app-server-lb-target/e052ab3ae635bcdb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-server-lb-target",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP2",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:725445055643:targetgroup/app-server-lb-target/e052ab3ae635bcdb-20220622144004832500000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:725445055643:targetgroup/app-server-lb-target/e052ab3ae635bcdb",
            "target_id": "i-07b47b92eb3519c53"
          },
          "dependencies": [
            "aws_instance.app_server",
            "aws_lb_target_group.app_server_wss",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-008ae2569b2e8376a",
            "id": "r-rtb-03c1d9382eda08eb11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03c1d9382eda08eb1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app_gateway",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:security-group/sg-032defed0c3b7fb2e",
            "description": "Terraform example security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032defed0c3b7fb2e",
            "ingress": [],
            "name": "terraform_security_group",
            "name_prefix": "",
            "owner_id": "725445055643",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-example-security-group"
            },
            "tags_all": {
              "Name": "terraform-example-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05574daad2672982f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:security-group/sg-0622f9b265b05e1a3",
            "description": "Terraform load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0622f9b265b05e1a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "99.99.99.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "99.99.99.0/24"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "99.99.99.0/24"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "99.99.99.0/24"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_lb_security_group",
            "name_prefix": "",
            "owner_id": "725445055643",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-lb-security-group"
            },
            "tags_all": {
              "Name": "terraform-lb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05574daad2672982f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:security-group/sg-03da66d683683d90e",
            "description": "Terraform RDS MySQL server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03da66d683683d90e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032defed0c3b7fb2e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform_rds_security_group",
            "name_prefix": "",
            "owner_id": "725445055643",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-rds-security-group"
            },
            "tags_all": {
              "Name": "terraform-rds-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05574daad2672982f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.default",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:subnet/subnet-001a367bf41899714",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001a367bf41899714",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725445055643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a"
            },
            "tags_all": {
              "Name": "public-us-east-1a"
            },
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:subnet/subnet-0227b050e7c05db91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0227b050e7c05db91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725445055643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b"
            },
            "tags_all": {
              "Name": "public-us-east-1b"
            },
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:subnet/subnet-0423f5832371e3531",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0423f5832371e3531",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725445055643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1c"
            },
            "tags_all": {
              "Name": "public-us-east-1c"
            },
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:subnet/subnet-0c2bc5f418630350e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2bc5f418630350e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725445055643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1d"
            },
            "tags_all": {
              "Name": "public-us-east-1d"
            },
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:subnet/subnet-0a7e93a7c8f502cae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7e93a7c8f502cae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725445055643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1e"
            },
            "tags_all": {
              "Name": "public-us-east-1e"
            },
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:subnet/subnet-0118a3823555686c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0118a3823555686c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725445055643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1f"
            },
            "tags_all": {
              "Name": "public-us-east-1f"
            },
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:subnet/subnet-06f58f682870e9129",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f58f682870e9129",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725445055643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds-us-east-1a"
            },
            "tags_all": {
              "Name": "rds-us-east-1a"
            },
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:subnet/subnet-0edccfe8dec308178",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edccfe8dec308178",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725445055643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds-us-east-1b"
            },
            "tags_all": {
              "Name": "rds-us-east-1b"
            },
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:subnet/subnet-0fb9081e680819db1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb9081e680819db1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725445055643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds-us-east-1c"
            },
            "tags_all": {
              "Name": "rds-us-east-1c"
            },
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:subnet/subnet-0dd85a3dabbc1ad07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd85a3dabbc1ad07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725445055643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds-us-east-1d"
            },
            "tags_all": {
              "Name": "rds-us-east-1d"
            },
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:subnet/subnet-051b3d97a903208de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051b3d97a903208de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725445055643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds-us-east-1e"
            },
            "tags_all": {
              "Name": "rds-us-east-1e"
            },
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:subnet/subnet-085b7218ddb7bc319",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085b7218ddb7bc319",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725445055643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds-us-east-1f"
            },
            "tags_all": {
              "Name": "rds-us-east-1f"
            },
            "vpc_id": "vpc-05574daad2672982f"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725445055643:vpc/vpc-05574daad2672982f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094977719e50f0e39",
            "default_route_table_id": "rtb-03c1d9382eda08eb1",
            "default_security_group_id": "sg-0c7352aa9204ac566",
            "dhcp_options_id": "dopt-02e4d0957503cc649",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05574daad2672982f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c1d9382eda08eb1",
            "owner_id": "725445055643",
            "tags": {
              "Name": "terraform-sequence-vpc"
            },
            "tags_all": {
              "Name": "terraform-sequence-vpc"
            }
          }
        }
      ]
    }
  ]
}